update working with conapi.at URL